manifests/istio/istioctl/istio-1.10.3/samples/bookinfo/networking/details-gateway-custom-host.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: details-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-gateway
spec:
  # Only allow details.example.com to access
  hosts:
  - "details.example.com"
  gateways:
  - details-gateway
  http:
  - match:
    - uri:
        prefix: /details
    - uri:
        exact: /health
    route:
    - destination:
        host: details
        port:
          number: 9080
