manifests/istio/istioctl/istio-1.10.3/samples/bookinfo/networking/virtual-service-ratings-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
